<resources>
    <string name="app_name">TheShoppy</string>
    <string name="name_label">Customer Name:</string>
    <string name="name_hint">Enter Customer Name</string>
    <string name="province_label">Province:</string>
    <string name="province_hint">Enter Province</string>
    <string name="desktop">Desktop</string>
    <string name="laptop">Laptop</string>
    <string name="ssd">SSD</string>
    <string name="printer">Printer</string>
    <string name="cooling_mat">Cooling Mat</string>
    <string name="usb_c_hub">USB C-HUB</string>
    <string name="laptop_stand">Laptop Stand</string>
    <string name="none">None</string>
    <string name="webcam">Webcam</string>
    <string name="external_hard_drive">External Hard Drive</string>
    <string name="calculate_invoice">Calculate Invoice</string>
    <string name="computer_type">Computer Type:</string>
    <string name="brand">Brand:</string>
    <string name="additional">Additional:</string>
    <string name="peripheral_label">Select a peripheral device:</string>
    <string name="invoice_label">Invoice:</string>
</resources>